worker-macros/tests/ui/start-wrong-param-count.rs
use worker_macros::event;

#[event(start)]
fn start(a: u32) {}

fn main() {}
